edit codes by omonu

--- a/LangRu.html
+++ b/LangRu.html
@@ -116,32 +116,32 @@
             </div>
 
             <div class="right-imgabsalute">
-              <img class="img-rigt" src="./img/exsemple (2).png" alt="" />
+              <img class="img-rigt" src="./img/mainphone_ru.svg" alt="" />
               <div class="icons-telephone">
                 <div class="top-icons">
                   <a class="keys" href="#">
                     <img
                       class="icons-all"
-                      src="./img/apartment.svg"
+                      src="./img/kvartira_ru.svg"
                       alt="апартаменты"
                     />
                   </a>
                   <a class="keys" href="#">
-                    <img class="icons-all" src="./img/empty.svg" alt="пусто" />
+                    <img class="icons-all" src="./img/quruqyer_ru.svg" alt="пусто" />
                   </a>
                   <a class="keys" href="#">
-                    <img class="icons-all" src="./img/house.png" alt="дом"
+                    <img class="icons-all" src="./img/uchastka_ru.svg" alt="дом"
                   /></a>
                 </div>
                 <div class="bottom-icons">
                   <a class="keys-bottom" href="#">
-                    <img class="icons-all" src="./img/dom.png" alt="жилой" />
+                    <img class="icons-all" src="./img/noturar_ru.svg" alt="жилой" />
                   </a>
                   <a class="keys-bottom" href="#">
-                    <img class="icons-all" src="./img/dom2.png" alt="пусто" />
+                    <img class="icons-all" src="./img/penthouse_ru.svg" alt="пусто" />
                   </a>
                   <a class="keys-bottom" href="#">
-                    <img class="icons-all" src="./img/cs.png" alt="cs"
+                    <img class="icons-all" src="./img/yangiqurilishlar_ru.svg" alt="cs"
                   /></a>
                 </div>
               </div>
