--- a/LangеTur.html
+++ b/LangеTur.html
@@ -118,32 +118,32 @@
             </div>
 
             <div class="right-imgabsalute">
-              <img class="img-rigt" src="./img/exsemple (2).png" alt="" />
+              <img class="img-rigt" src="./img/mainphone_tr.svg" alt="" />
               <div class="icons-telephone">
                 <div class="top-icons">
                   <a class="keys" href="#">
-                    <img
+                    <img`
                       class="icons-all"
-                      src="./img/apartment.svg"
+                      src="./img/kvartira_tr.svg"
                       alt="apartman"
                     />
                   </a>
                   <a class="keys" href="#">
-                    <img class="icons-all" src="./img/empty.svg" alt="boş" />
+                    <img class="icons-all" src="./img/quruqyer_tr.svg" alt="boş" />
                   </a>
                   <a class="keys" href="#">
-                    <img class="icons-all" src="./img/house.png" alt="ev"
+                    <img class="icons-all" src="./img/uchastka_tr.svg" alt="ev"
                   /></a>
                 </div>
                 <div class="bottom-icons">
                   <a class="keys-bottom" href="#">
-                    <img class="icons-all" src="./img/dom.png" alt="konut" />
+                    <img class="icons-all" src="./img/noturar_tr.svg" alt="konut" />
                   </a>
                   <a class="keys-bottom" href="#">
-                    <img class="icons-all" src="./img/dom2.png" alt="boş" />
+                    <img class="icons-all" src="./img/penthouse_tr.svg" alt="boş" />
                   </a>
                   <a class="keys-bottom" href="#">
-                    <img class="icons-all" src="./img/cs.png" alt="cs"
+                    <img class="icons-all" src="./img/yangiqurilishlar_tr.svg" alt="cs"
                   /></a>
                 </div>
               </div>
