--- a/index.html
+++ b/index.html
@@ -118,32 +118,32 @@
             </div>
 
             <div class="right-imgabsalute">
-              <img class="img-rigt" src="./img/exsemple (2).png" alt="" />
+              <img class="img-rigt" src="./img/mainphone_uz.svg" alt="" />
               <div class="icons-telephone">
                 <div class="top-icons">
                   <a class="keys" href="#">
                     <img
                       class="icons-all"
-                      src="./img/apartment.svg"
+                      src="./img/kvartira.svg"
                       alt="apartment"
                     />
                   </a>
                   <a class="keys" href="#">
-                    <img class="icons-all" src="./img/empty.svg" alt="empty" />
+                    <img class="icons-all" src="./img/quruqyer.svg" alt="empty" />
                   </a>
                   <a class="keys" href="#">
-                    <img class="icons-all" src="./img/house.png" alt="cs"
+                    <img class="icons-all" src="./img/uchastka.svg" alt="cs"
                   /></a>
                 </div>
                 <div class="bottom-icons">
                   <a class="keys-bottom" href="#">
-                    <img class="icons-all" src="./img/dom.png" alt="resident" />
+                    <img class="icons-all" src="./img/noturar.svg" alt="resident" />
                   </a>
                   <a class="keys-bottom" href="#">
-                    <img class="icons-all" src="./img/dom2.png" alt="empty" />
+                    <img class="icons-all" src="./img/penthouse.svg" alt="empty" />
                   </a>
                   <a class="keys-bottom" href="#">
-                    <img class="icons-all" src="./img/cs.png" alt="cs"
+                    <img class="icons-all" src="./img/yangiqurilishalr.svg" alt="cs"
                   /></a>
                 </div>
               </div>
