--- a/LangеTur.html
+++ b/LangеTur.html
@@ -122,14 +122,13 @@
               <div class="icons-telephone">
                 <div class="top-icons">
                   <a class="keys" href="#">
-                    <img`
+                    <img
                       class="icons-all"
                       src="./img/kvartira_tr.svg"
-                      alt="apartman"
-                    />
+                      alt="apartman"/>
                   </a>
                   <a class="keys" href="#">
-                    <img class="icons-all" src="./img/quruqyer_tr.svg" alt="boş" />
+                    <img class="icons-all" src="./img/quruqyeer.svg" alt="boş" />
                   </a>
                   <a class="keys" href="#">
                     <img class="icons-all" src="./img/uchastka_tr.svg" alt="ev"
