fix flags updates

--- a/LangEng.html
+++ b/LangEng.html
@@ -49,16 +49,16 @@
               <select class="language-select" id="selectLanguage" onchange="updateFlag()">
                 <option value="UZ" data-flag="./img/uzflag.svg">UZ</option>
 
-                <option value="RU" data-flag="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg">
+                <option value="RU" data-flag="./img/ruflag.svg">
                   RU
                 </option>
 
-                <option value="TUR" data-flag="https://upload.wikimedia.org/wikipedia/commons/b/b4/Flag_of_Turkey.svg">
+                <option value="TUR" data-flag="./img/turflag.svg">
                   TUR
                 </option>
 
                 <option selected value="EN"
-                  data-flag="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg">
+                  data-flag="./img/engflag.svg">
                   ENG
                 </option>
               </select>
