--- a/LangRu.html
+++ b/LangRu.html
@@ -50,16 +50,16 @@
                 <option value="UZ" data-flag="./img/uzflag.svg">UZ</option>
 
                 <option selected value="RU"
-                  data-flag="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg">
+                  data-flag="./img/ruflag.svg">
                   RU
                 </option>
 
-                <option value="TUR" data-flag="https://upload.wikimedia.org/wikipedia/commons/b/b4/Flag_of_Turkey.svg">
+                <option value="TUR" data-flag="./img/turflag.svg">
                   TUR
                 </option>
 
                 <option value="EN"
-                  data-flag="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg">
+                  data-flag="./img/engflag.svg">
                   ENG
                 </option>
               </select>
