edit some text and icon and title

--- a/LangRu.html
+++ b/LangRu.html
@@ -16,7 +16,8 @@
   <link rel="stylesheet" href="./main.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <title>Документ</title>
+  <link rel="icon" href="./img/uysavdo.jpg" type="image/jpg">
+  <title>Дом Торговля</title>
 </head>
 
 <body>
@@ -221,15 +222,15 @@
     <div class="container">
       <div class="footer-wrapper">
         <div class="footer-iocns">
-          <a href="">
-            <img src="./img/image 23.png" alt="" />
+          <a href="https://t.me/uysavdo_bot">
+            <img src="./img/image 23.png" alt=""/>
           </a>
-          <a href="">
+          <a href="https://www.instagram.com/uysavdo_com/">
             <img src="./img/ins.png" alt="" />
           </a>
-          <a href="">
+          <!-- <a href="https://youtube.com/">
             <img src="./img/image.png" alt="" />
-          </a>
+          </a> -->
           <a href="">
             <img src="./img/Facebook.png" alt="" />
           </a>
