--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <link rel="stylesheet" href="./main.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <title>Document</title>
+  <link rel="icon" href="./img/uysavdo.jpg" type="image/jpg">
+  <title>Uy Savdo</title>
+  
 </head>
 
 <body>
@@ -135,7 +137,7 @@
               mahsulotlar va xizmatlar birgalikda ajoyib uy xaridi tajribasini taqdim etishga imkon yaratadi. Bu,
               albatta, uy sotib olish va sotish jarayonlarini soddalashtirishga yordam beradigan asosiy vositadir. Biz
               har bir tafsilotga sinchkovlik bilan yondashamiz va qulaylikni ustuvor deb bilamiz. Mahsulotlarimiz va
-              xizmatlarimiz birlashganda, mijozlarimiz uchun eng yaxshi uy xarid qilish maydoni paydo bo‘ladi.
+              xizmatlarimiz birlashganda, mijozlarimiz uchun eng yaxshi uy xarid qilish imkoniyati paydo bo‘ladi.
               Shubhasiz, "Uysavdo" sizga sifatli va tezkor xizmatlar ko‘rsatish uchun ideal tanlovdir.
             </p>
           </div>
@@ -220,15 +222,15 @@
     <div class="container">
       <div class="footer-wrapper">
         <div class="footer-iocns">
-          <a href="">
-            <img src="./img/image 23.png" alt="" />
+          <a href="https://t.me/uysavdo_bot">
+            <img src="./img/image 23.png" alt=""/>
           </a>
-          <a href="">
+          <a href="https://www.instagram.com/uysavdo_com/">
             <img src="./img/ins.png" alt="" />
           </a>
-          <a href="">
+          <!-- <a href="https://youtube.com/">
             <img src="./img/image.png" alt="" />
-          </a>
+          </a> -->
           <a href="">
             <img src="./img/Facebook.png" alt="" />
           </a>
@@ -246,5 +248,4 @@
     AOS.init();
   </script>
 </body>
-
 </html>
