--- a/LangEng.html
+++ b/LangEng.html
@@ -14,9 +14,11 @@
   <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
   <!-- fotns -->
   <link rel="stylesheet" href="./main.css" />
+  
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <title>Document</title>
+  <link rel="icon" href="./img/uysavdo.jpg" type="image/jpg">
+  <title>House Trading</title>
 </head>
 
 <body>
@@ -42,7 +44,7 @@
             </button>
 
 
-            
+
             <button class="nav-icons-buttons">
               <a href=""> <img src="./img/Google-Play.png" alt="" /> </a>
             </button>
@@ -221,15 +223,15 @@
     <div class="container">
       <div class="footer-wrapper">
         <div class="footer-iocns">
-          <a href="">
-            <img src="./img/image 23.png" alt="" />
+          <a href="https://t.me/uysavdo_bot">
+            <img src="./img/image 23.png" alt=""/>
           </a>
-          <a href="">
+          <a href="https://www.instagram.com/uysavdo_com/">
             <img src="./img/ins.png" alt="" />
           </a>
-          <a href="">
+          <!-- <a href="https://youtube.com/">
             <img src="./img/image.png" alt="" />
-          </a>
+          </a> -->
           <a href="">
             <img src="./img/Facebook.png" alt="" />
           </a>
